# src/rest/routes/route.go
@@ -10,6 +10,7 @@ import (
 type RouteHandler struct {
 	Router      *gin.Engine
 	AuthHandler handler.AuthHandler
+	UserHandler handler.UserHandler
 }
 
 func (r *RouteHandler) Setup() {
@@ -17,7 +18,14 @@ func (r *RouteHandler) Setup() {
 	api := r.Router.Group("/api")
 
 	user := api.Group("/users")
+
 	auth := user.Group("/auth")
 	auth.POST("/register", r.AuthHandler.RegisterUser)
 	auth.POST("/login", r.AuthHandler.LoginUser)
+
+	profile := user.Group("/profiles")
+	profile.GET("/", r.UserHandler.GetAllUsers)
+	profile.PUT("/:id", r.UserHandler.UpdateProfile)
+	profile.GET("/:id", r.UserHandler.GetUserByID)
+	profile.PUT("/:id/status", r.UserHandler.UpdateStatusByID)
 }
